--- a/css/main.css
+++ b/css/main.css
@@ -541,14 +541,14 @@ ul.show {
   .text_one {
     font-size: 30px;
     line-height: 34px;
-    margin-left: -50px;
+    margin-left: -60px;
     margin-top: 130px;
   }
   
   .text_pap {
     font-size: 18px;
     line-height: 25px;
-    margin-left: -50px;
+    margin-left: -60px;
     margin-top: 74px;
   }
 
@@ -557,14 +557,15 @@ ul.show {
   }
 
   .btn {
-    margin-left: 350px;
-    width: 200px;
+    margin-left: 310px;
+    width: 200px;;
   }
+
 
   .container_images2 {
     width: 300px;
     height: 300px;
-    left: 11%;
+    left: 23%;
     margin-top: -75px;
   }
 
@@ -574,7 +575,7 @@ ul.show {
   }
 
   .text_ss {
-    left: 11%;
+    left: 23%;
     margin-top: 240px;
     font-size: 13pt;
   }
@@ -583,20 +584,20 @@ ul.show {
     font-size: 16pt;
     line-height: 25px;
     width: 340px;
-    left: 11%;
+    left: 23%;
     margin-top: 225px;
   }
 
   .pap_s {
     font-size: 13pt;
     width: 340px;
-    left: 11%;
+    left: 23%;
     margin-top: 175px;
   }
 
 
   .btn2 {
-    left: 11%;
+    left: 23%;
     margin-top: 170px;
     width: 190px;
   }
@@ -605,34 +606,87 @@ ul.show {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 800px;
+    height: 500px;
   }
 
   .container_icono-te {
-    width: 50%;
+    width: 40%;
     top: -30px;
-    left: -5%;
+    left: 10%;
     position: absolute;
+  }
+
+  .text_rosadito {
+    position: relative;
+    font-size: 13pt;
+    line-height: 25px;
+    width: 340px;
+    left: 13%;
+    margin-top: 175px;
+  }
+
+  .text_metro1_ {
+    position: relative;
+    font-size: 13pt;
+    line-height: 25px;
+    width: 340px;
+    left: 13%;
+    margin-top: 175px;
   }
 
   .container_icono-tr {
-    width: 50%;
+    width: 40%;
     top: 200px;
-    left: -50%;
+    left: -19%;
     position: absolute;
   }
 
+  .text_azulito {
+    position: relative;
+    font-size: 13pt;
+    line-height: 25px;
+    width: 340px;
+    left: 8%;
+    margin-top: 175px;
+  }
+
+  .text_metro2_ {
+    position: relative;
+    font-size: 12pt;
+    line-height: 25px;
+    left: 8%;
+    margin-top: 175px;
+  }
+
   .container_icono-dq {
-    width: 50%;
+    width: 40%;
     top: 450px;
-    left: -50%;
+    left: -20%;
     position: absolute;
+  }
+
+  .text_rosadito_a {
+    position: relative;
+    font-size: 13pt;
+    line-height: 25px;
+    width: 340px;
+    left: 10%;
+    margin-top: 175px;
+  }
+
+  .text_metro3_ {
+    position: relative;
+    font-size: 12pt;
+    line-height: 25px;
+    width: 340px;
+    left: 10%;
+    margin-top: 175px;
   }
 
   .container_images_seccion3 {
     width: 300px;
     height: 300px;
-    left: 50px;
+    left: 23%;
     margin-top: 350px;
   }
 
@@ -645,17 +699,15 @@ ul.show {
     font-size: 23pt;
     width: 340px;
     margin-top: 670px;
-    left: 11%;
+    left: 23%;
   }
 
   .text_pap_seccion3 {
     font-size: 15px;
     width: 340px;
     margin-top: 690px;
-    left: 11%;
-  }
-
-
+    left: 23%;
+  } 
 
   .btn_container3 {
     margin-top: -30px;
@@ -663,8 +715,25 @@ ul.show {
 
   .btn_seccion3 {
     margin-top: 660px;
-    left: 11%;
+    left: 23%;
   }
+
+  .container_blog_encabezado {
+    margin-top: -30px;
+  }
+ 
+  .text_blog {
+    position: relative;
+    font-size: 23pt;
+    width: 340px;
+    left: 43%;
+    margin-top: 700px;
+  }
+
+
+
+
+
 
   .footer_all {
     margin-top: 3000px;
@@ -704,4 +773,56 @@ ul.show {
     height: calc(100% - 65px);
     overflow: scroll;
   }
+
+
+}
+
+@media screen and (max-width: 858px) {
+
+  .menu {
+    height: 65px;
+  }
+
+  .btn_menu {
+    display: inline-flex;
+  }
+
+  .menu-items {
+    position: absolute;
+    width: 100vw;
+    height: calc(100% - 65px);
+    background: #ffffff;
+    top: -100vh;
+    transition: all 0.4s;
+    text-align: left;
+    flex-direction: column;
+    z-index: 3;
+  }
+
+  .menu-items li {
+    margin: 30px 0 0 0;
+    line-height: 30px;
+  }
+
+  .menu-items li:hover {
+    background: none;
+  }
+
+  .menu-items li a {
+    font-size: 23px;
+    color: #000000;
+    font-family: "Metropolis";
+    font-weight: Medium;
+  }
+
+  .menu-items li a:hover {
+    color: #ff80cc;
+  }
+
+  .logo {
+    font-size: 25px;
+    padding-left: -15px;
+  }
+
+
 }
