--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 /* Cuerpo de la pagina */
 body {
   font-family: "Metropolis";
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 }
 /* Menus (Blog, Nosotros, home, etc) */
 .menu {
@@ -954,5 +954,254 @@ ul.show {
   margin-top: 175px;
  }
 
- 
+ .text_one_session {
+  left: 10%;
+ }
+
+ .text_pap_seccion3 {
+   left: 10%;
+ }
+
+ .btn_seccion3 {
+    left: 10%;
+ }
+
+ .container_images_seccion3 {
+  width: 400px;
+  height: 400px;
+  left: 70%;
+  margin-top: -10px;
+ }
+
+  .text_blog {
+    position: relative;
+    left: -30%;
+  }
+
+  .blog-line {
+    left: -31%;
+  }
+
+  .footer_all {
+    height: 199px;
+  }
+
+  .footer_text {
+    left: 3%;
+    top: -80px;
+  }
+
+  .icon-ig {
+    left: 3%;
+    top: -150px;
+  }
+
+  .icon-lk {
+    left: 7%;
+    top: -150px;
+  }
+
+}
+
+
+@media screen and (max-width: 400px) {
+  
+  .text_one {
+    font-size: 30px;
+    line-height: 34px;
+    margin-left: -40%;
+    margin-top: 130px;
+  }
+  
+  .text_pap {
+    font-size: 18px;
+    line-height: 25px;
+    margin-left: -40%;
+    margin-top: 74px;
+  }
+
+  .btn_container {
+   display: none;
+  }
+
+  .container_images2 {
+    width: 300px;
+    height: 300px;
+    left: 15%;
+    margin-top: -75px;
+  }
+
+  .text_ss {
+    left: 15%;
+    margin-top: 240px;
+    font-size: 13pt;
+  }
+
+  .text_s {
+    font-size: 16pt;
+    line-height: 25px;
+    width: 340px;
+    left: 15%;
+    margin-top: 225px;
+  }
+
+  .pap_s {
+    font-size: 13pt;
+    width: 340px;
+    left: 15%;
+    margin-top: 175px;
+  }
+
+  .btn2 {
+    left: 15%;
+    margin-top: 170px;
+    width: 190px;
+  }
+
+  .container__icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+  }
+
+  .container_icono-te {
+    width: 50%;
+    top: -10px;
+    left: 5%;
+    position: absolute;
+  }
+
+  .text_rosadito {
+    position: relative;
+    font-size: 12px;
+    line-height: 13px;
+    left: 13%;
+    margin-top: 175px;
+  }
+
+  .text_metro1_ {
+    position: relative;
+    font-size: 12px;
+    line-height: 13px;
+    width: 340px;
+    left: 13%;
+    margin-top: 175px;
+  }
+
+  .container_icono-tr {
+    width: 50%;
+    top: 200px;
+    left: -49%;
+    position: absolute;
+  }
+
+  .text_azulito {
+    position: relative;
+    font-size: 12px;
+    line-height: 13px;
+    left: 8%;
+    margin-top: 175px;
+  }
+
+  .text_metro2_ {
+    position: relative;
+    font-size: 11px;
+    line-height: 13px;
+    left: 8%;
+    margin-top: 175px;
+  }
+
+  .container_icono-dq {
+    width: 50%;
+    top: 450px;
+    left: -50%;
+    position: absolute;
+  }
+
+  .text_rosadito_a {
+    position: relative;
+    font-size: 12px;
+    line-height: 15px;
+    width: 340px;
+    left: 10%;
+    margin-top: 175px;
+  }
+
+  .text_metro3_ {
+    position: relative;
+    font-size: 11px;
+    line-height: 13px;
+    width: 340px;
+    left: 10%;
+    margin-top: 175px;
+  }
+
+  .container_images_seccion3 {
+    width: 300px;
+    height: 300px;
+    left: 15%;
+    margin-top: 230px;
+  }
+
+  .text_one_session {
+    font-size: 26px;
+    line-height: 30px;
+    margin-top: 550px;
+    left: 15%;
+  }
+
+  .text_pap_seccion3 {
+    font-size: 16px;
+    width: 340px;
+    margin-top: 510px;
+    left: 15%;
+  } 
+
+  .btn_seccion3 {
+    margin-top: 480px;
+    left: 15%;
+  }
+
+  .container_blog_encabezado {
+    margin-top: -150px;
+    left: -120%;
+  }
+
+  .text_blog {
+    position: relative;
+    font-size: 13pt;
+    width: 340px;
+    left: -15%;
+    margin-top: 600px;
+  }
+
+  .blog-line {
+    position: relative;
+    left: -9%;
+  }
+
+  .footer_all {
+    margin-top: 2130px;
+    height: 136px;
+  }
+
+  .footer_text {
+    font-family: "Metropolis";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 10px;
+    left: 11%;
+  }
+
+  .icon-ig {
+    left: 11%;
+    margin-top: 20px;
+  }
+
+  .icon-lk {
+    left: 20%;
+    font-size: 10px;
+    margin-top: 20px;
+  }
 }
