--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 /* Cuerpo de la pagina */
 body {
   font-family: "Metropolis";
-  /*overflow-x: hidden;*/
+  overflow-x: hidden;
 }
 /* Menus (Blog, Nosotros, home, etc) */
 .menu {
