--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -183,4 +183,10 @@ ul.show {
 }
 
 
+.equipo_lista {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 70px;
+}
 
