--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: "Metropolis";
-  /*overflow-x: hidden;*/
+  overflow-x: hidden;
 }
 /* Menus (Blog, Nosotros, home, etc) */
 .menu {
@@ -274,4 +274,79 @@ ul.show {
   font-style: normal;
   font-weight: 500;
   font-size: 22px;
+}
+
+
+.img_empresa_aa {
+  margin-left: 100px;
+  margin-top: 100px;
+}
+.text_empresa {
+  margin-left: 720px;
+  margin-top: -200px;
+}
+
+.pp_text_empre {
+  font-family: "Metropolis";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 33px;
+  width: 85%;
+}
+
+.blog {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 600px;
+  top: 2420px;
+}
+
+/* Contenedor Footer - Todo el footer*/
+.footer_all {
+  width: 1348px;
+  height: 199px;
+  left: 0px;
+  margin-top: 600px;
+  background: #d0ebfc;
+}
+/* Contenedor Footer - Container Texto footer*/
+.container__footer_text {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+/* Contenedor Footer - Texto footer*/
+.footer_text {
+  position: absolute;
+  width: 370px;
+  height: 15px;
+  left: 73px;
+  top: -60px;
+
+  font-family: "Metropolis";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 15px;
+  color: #000000;
+}
+/* Contenedor Footer - Icono instagram*/
+.icon-ig {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  left: 1201px;
+  top: -70px;
+  cursor: pointer;
+}
+/* Contenedor Footer - Icono Linkend*/
+.icon-lk {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  left: 1239px;
+  top: -70px;
+  cursor: pointer;
 }
