--- a/css/contacto.css
+++ b/css/contacto.css
@@ -212,11 +212,11 @@ ul.show {
 
 #name {
   margin-top: 60px;
-  margin-left: -205px;
-  width:600px;
+  margin-left: -105px;
+  width: 501px;
   height: 60px;
   background-color: #E6F7FF;
-  border: 1px solid #E6F7FF;
+  border: 4px solid #E6F7FF;
   outline: none;
 }
 
@@ -226,15 +226,17 @@ ul.show {
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
-
 }
+
+
+
 #empresa {
   margin-top: 60px;
-  margin-left: 30px;
-  width: 600px;
+  margin-left: 40px;
+  width: 501px;
   height: 60px;
   background-color: #E6F7FF;
-  border: 1px solid #E6F7FF;
+  border: 4px solid #E6F7FF;
   outline: none;
 }
 
@@ -248,11 +250,11 @@ ul.show {
 
 #email {
   margin-top: 10px;
-  margin-left: -205px;
-  width:600px;
+  margin-left: -105px;
+  width: 501px;
   height: 60px;
   background-color: #E6F7FF;
-  border: 1px solid #E6F7FF;
+  border: 4px solid #E6F7FF;
   outline: none;
 }
 
@@ -266,11 +268,11 @@ ul.show {
 
 #telefono {
   margin-top: 10px;
-  margin-left: 30px;
-  width: 600px;
+  margin-left: 40px;
+  width: 501px;
   height: 60px;
   background-color: #E6F7FF;
-  border: 1px solid #E6F7FF;
+  border: 4px solid #E6F7FF;
   outline: none;
 }
 
@@ -283,10 +285,10 @@ ul.show {
 }
 
 #message {
-  margin-left: -205px;
+  margin-left: -105px;
   margin-top: 10px;
   background-color: #E6F7FF;
-  border: 1px solid #E6F7FF;
+  border: 4px solid #E6F7FF;
 }
 
 #message::placeholder {
@@ -312,4 +314,56 @@ ul.show {
 }
 #trucazo {
   opacity: 0;
+}
+
+.footer_all {
+  width: 1348px;
+  height: 199px;
+  left: 0px;
+  margin-top: 100px;
+  background: #d0ebfc;
+}
+/* Contenedor Footer - Container Texto footer*/
+.container__footer_text {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+/* Contenedor Footer - Texto footer*/
+.footer_text {
+  position: absolute;
+  width: 370px;
+  height: 15px;
+  left: 73px;
+  top: -60px;
+
+  font-family: "Metropolis";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  color: #1D1D1B;
+}
+/* Contenedor Footer - Icono instagram*/
+.icon-ig {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  left: 1201px;
+  top: -70px;
+}
+/* Contenedor Footer - Icono Linkend*/
+.icon-lk {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  left: 1239px;
+  top: -70px;
+}
+
+.siguenos {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  left: 1090px;
+  top: -109px;
 }
