--- a/css/servicios.css
+++ b/css/servicios.css
@@ -217,42 +217,72 @@ ul.show {
   left: 900px;
   color: #575756;
 }
+section {
+  padding-top: 70rem;
+  padding-left: 500px;  
+  width: 50%;
+}
 
-.acordeon {
+
+details[open] summary ~ * {
+  animation: open 0.3s ease-in-out;
+}
+
+@keyframes open {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+details summary::-webkit-details-marker {
+  display: none;
+}
+
+details summary {
+  width: 100%;
+  padding: 0.5rem 0;
+  border-top: 1px solid #FF80CC;
+  position: relative;
+  cursor: pointer;
+  font-size: 1.25rem;
+  font-weight: 300;
+  list-style: none;
+}
+
+details summary:after {
+  content: "+";
+  color: #FF80CC;
   position: absolute;
-  top: 1100px;
-  left: 600px;
+  font-size: 1.75rem;
+  line-height: 0;
+  margin-top: 0.75rem;
+  right: 0;
+  font-weight: 200;
+  transform-origin: center;
+  transition: 200ms linear;
 }
 
-.summay1 {
-  list-style: none;
-}
-
-.summay1::before {
-  content: "+";
-  padding-right: 1rem;
-  color: #FF80CC;
-}
-
-.detalles[open] .summay1::before {
+details[open] summary:after {
   content: "-";
   color: #47AAF4;
+  position: absolute;
+  font-size: 1.75rem;
+  line-height: 0;
+  margin-top: 0.75rem;
+  right: 0;
+  font-weight: 200;
+  transform-origin: center;
+  transition: 200ms linear;
 }
 
-
-.summay2 {
-  list-style: none;
+details summary {
+  outline: 0;
 }
-
-.summay2::before {
-  content: "+";
-  padding-right: 1rem;
-  color: #FF80CC;
+details p {
+  font-size: 0.95rem;
+  margin: 0 0 1rem;
+  padding-top: 1rem;
 }
-
-.detalles2[open] .summay2::before {
-  content: "-";
-  color: #47AAF4;
-}
-
 
