--- a/css/servicios.css
+++ b/css/servicios.css
@@ -228,6 +228,7 @@ details[open] summary ~ * {
   animation: open 0.3s ease-in-out;
 }
 
+
 @keyframes open {
   0% {
     opacity: 0;
@@ -249,6 +250,11 @@ details summary {
   font-size: 1.25rem;
   font-weight: 300;
   list-style: none;
+
+  font-family: "Metropolis";
+  font-style: normal;
+  font-weight: 700;
+
 }
 
 details summary:after {
@@ -281,8 +287,17 @@ details summary {
   outline: 0;
 }
 details p {
-  font-size: 0.95rem;
+  font-size: 14px;
+  width: 480px;
   margin: 0 0 1rem;
   padding-top: 1rem;
+  padding-left: 2rem;
+
+  color: #575756;
+  font-family: "Metropolis";
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+
 }
 
