--- a/css/servicios.css
+++ b/css/servicios.css
@@ -349,3 +349,73 @@ details p {
   width: 510px;
   left: 670px;
 }
+.text_blog {
+ position: relative; 
+}
+.text_blog_damm {
+  position: absolute;
+  top: 600px;
+  left: 540px;
+  font-family: "Metropolis";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 19px;
+}
+
+.line_blog_uwu {
+  position: absolute;
+  top: 280px;
+  left: -60px;
+}
+
+.footer_all {
+  width: 1348px;
+  height: 199px;
+  left: 0px;
+  margin-top: 1000px;
+  background: #d0ebfc;
+}
+/* Contenedor Footer - Container Texto footer*/
+.container__footer_text {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+/* Contenedor Footer - Texto footer*/
+.footer_text {
+  position: absolute;
+  width: 370px;
+  height: 15px;
+  left: 73px;
+  top: -60px;
+
+  font-family: "Metropolis";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  color: #1D1D1B;
+}
+/* Contenedor Footer - Icono instagram*/
+.icon-ig {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  left: 1201px;
+  top: -70px;
+}
+/* Contenedor Footer - Icono Linkend*/
+.icon-lk {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  left: 1239px;
+  top: -70px;
+}
+
+.siguenos {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  left: 1090px;
+  top: -109px;
+}
