--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -1,3 +1,5 @@
+
+
 *,
 *:before,
 *:after {
@@ -187,11 +189,9 @@ ul.show {
   background: #ff80cc;
 }
 
-
 .equipo_lista {
-    margin-top: 70px;
+  margin-top: 70px;
 }
-
 
 .imagen_diseñador {
   margin-left: 12%;
@@ -202,7 +202,6 @@ ul.show {
   margin-left: 12%;
   margin-top: 100px;
 }
-
 
 .bio_diseñador {
   position: relative;
@@ -218,12 +217,12 @@ ul.show {
   font-weight: 400;
   font-style: normal;
   color: #575756;
-} 
+}
 
 .pp_desing {
   position: relative;
   margin-top: 41px;
-  color: #FF80CC;
+  color: #ff80cc;
   font-family: "Metropolis";
   font-style: normal;
   font-weight: 500;
@@ -233,7 +232,7 @@ ul.show {
 .pp_desing2 {
   position: relative;
   margin-top: 5px;
-  color: #47AAF4;
+  color: #47aaf4;
   font-family: "Metropolis";
   font-style: normal;
   font-weight: 500;
@@ -259,7 +258,7 @@ ul.show {
 .mat_name {
   position: relative;
   margin-top: 71px;
-  color: #FF80CC;
+  color: #ff80cc;
   font-family: "Metropolis";
   font-style: normal;
   font-weight: 500;
@@ -269,40 +268,51 @@ ul.show {
 .text_dev {
   position: relative;
   margin-top: 5px;
-  color: #47AAF4;
+  color: #47aaf4;
   font-family: "Metropolis";
   font-style: normal;
   font-weight: 500;
   font-size: 22px;
 }
 
-
-.img_empresa_aa {
-  margin-left: 100px;
-  margin-top: 100px;
+.empresa_wu {
+  position: absolute;
 }
-.text_empresa {
-  position: relative;
-  margin-left: 710px;
-  margin-top: -181px;
 
+.img_empresas {
+  position: relative;
+  top: 100px;
+  left: 100px;
+}
+
+.img_empresa2 {
+  position: relative;
+  top: 99px;
+  left: 95px;
+  width: 600px;
+}
+
+
+
+.botn {
+  position: absolute;
+  width: 200px;
+  height: 40px;
+  left: 670px;
+  top: 280px;
 }
 
 .pp_text_empre {
+  position: absolute;
   font-family: "Metropolis";
   font-style: normal;
-  font-weight: 600;
-  font-size: 25px;
-  line-height: 27px;
-  width: 440px;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 33px;
+  width: 510px;
+  left: 670px;
+  top: 140px;
 }
-.line__empresa {
-  width: 600px;
-  height: 12px;
-  margin-left: 625px;
-  margin-top: -150px;
-}
-
 
 
 
@@ -318,12 +328,12 @@ ul.show {
   margin-top: -665px;
 }
 
-/* Contenedor Footer - Todo el footer*/
+
 .footer_all {
-  width: 1276px;
-  height: 198px;
-  margin-left: 40px;
-  margin-top: 800px;
+  width: 1376px;
+  height: 270px;
+  left: 0px;
+  margin-top: 900px;
   background: #d0ebfc;
 }
 /* Contenedor Footer - Container Texto footer*/
@@ -334,18 +344,17 @@ ul.show {
 }
 /* Contenedor Footer - Texto footer*/
 .footer_text {
-  position: relative;
+  position: absolute;
   width: 370px;
   height: 15px;
   left: 73px;
-  top: -40px;
+  top: -60px;
 
   font-family: "Metropolis";
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
-  line-height: 15px;
-  color: #000000;
+  color: #1D1D1B;
 }
 /* Contenedor Footer - Icono instagram*/
 .icon-ig {
