--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,3 +1,112 @@
+@font-face {
+  font-family: 'metropolisblack';
+  src: url('../fonts/metropolis-black-webfont.woff') format('woff2'),
+       url('../fonts/metropolis-black-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'metropolisblack_italic';
+  src: url('../fonts/metropolis-blackitalic-webfont.woff2') format('woff2'),
+       url('../fonts/metropolis-blackitalic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'metropolisbold';
+  src: url('../fonts/metropolis-bold-webfont.woff2') format('woff2'),
+       url('../fonts/metropolis-bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'metropolisbold_italic';
+  src: url('../fonts/metropolis-bolditalic-webfont.woff2') format('woff2'),
+       url('../fonts/metropolis-bolditalic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'metropolisextra_bold';
+  src: url('../fonts/metropolis-extrabold-webfont.woff2') format('woff2'),
+       url('../fonts/metropolis-extrabold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'metropolisextra_bold_italic';
+  src: url('../fonts/metropolis-extrabolditalic-webfont.woff2') format('woff2'),
+       url('../fonts/metropolis-extrabolditalic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'metropolisextra_light';
+  src: url('../fonts/metropolis-extralight-webfont.woff2') format('woff2'),
+       url('../fonts/metropolis-extralight-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'metropolisextra_light_italic';
+  src: url('../fonts/metropolis-extralightitalic-webfont.woff2') format('woff2'),
+       url('../fonts/metropolis-extralightitalic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'metropolislight';
+  src: url('../fonts/metropolis-light-webfont.woff2') format('woff2'),
+       url('../fonts/metropolis-light-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'metropolislight_italic';
+  src: url('../fonts/metropolis-lightitalic-webfont.woff2') format('woff2'),
+       url('../fonts/metropolis-lightitalic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'metropolismedium';
+  src: url('../fonts/metropolis-medium-webfont.woff2') format('woff2'),
+       url('../fonts/metropolis-medium-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'metropolismedium_italic';
+  src: url('../fonts/metropolis-mediumitalic-webfont.woff2') format('woff2'),
+       url('../fonts/metropolis-mediumitalic-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+
 *,
 *:before,
 *:after {
